<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_moveit_py</name>
  <version>2.2.0</version>
  <description>Demo for using MoveIt Python API.</description>
  <maintainer email="taku8926@gmail.com">takuya-ki</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>lbr_bringup</exec_depend>
  <exec_depend>lbr_description</exec_depend>
  <exec_depend>lbr_fri_idl</exec_depend>
  <exec_depend>lbr_ros2_control</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>